# magipy

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  catkin.cmake  package.xml  setup.py
scripts/: grasp_glass_demo.py
src/magi/: __init__.py  execution.py  logging_utils.py  monitor.py  parameters.py  planning.py
src/magi/actions/: Disable.py  Grasping.py  MoveHand.py  MoveUntilTouch.py  Null.py  Parallel.py  PlaceObject.py  Plan.py  PushObject.py  RearrangeObject.py  Sequence.py  Teleport.py  __init__.py  base.py  util.py  validate.py
src/magi/actions/validators/: Grasping.py  PoseValidator.py  Validator.py  __init__.py
src/magi/recovery/: NaiveRecoveryPlanner.py  PatchRecoveryPlanner.py  recovery_helper.py
tests/: magi_test_helper.py  test_MoveHand.py
