<?xml version="1.0"?>
<package>
  <name>magi</name>
  <version>3.0.1</version>
  <description>
    Multistep Action Graph Instantiator
  </description>
  <url type="repository">https://github.com/personalrobotics/magi</url>
  <maintainer email="gilwool@cs.cmu.edu">Gilwoo Lee</maintainer>
  <author email="gilwool@cs.cmu.edu">Gilwoo Lee</author>
  <license>unreleased</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atlas</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>python</build_depend>
  <run_depend>prpy</run_depend>
  <run_depend>python-argparse</run_depend>
  <run_depend>python-hashlib</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-networkx</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-scikit-learn</run_depend>
</package>
