<?xml version="1.0"?>
<package format="2">
  <name>magi</name>
  <version>3.0.1</version>
  <description>
    Multistep Action Graph Instantiator
  </description>
  <url type="repository">https://github.com/personalrobotics/magi</url>
  <maintainer email="gilwool@cs.cmu.edu">Gilwoo Lee</maintainer>
  <author email="gilwool@cs.cmu.edu">Gilwoo Lee</author>
  <license>unreleased</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atlas</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <depend>prpy</depend>
  <depend>python-argparse</depend>
  <depend>python-hashlib</depend>
  <depend>python-matplotlib</depend>
  <depend>python-networkx</depend>
  <depend>python-numpy</depend>
  <depend>python-rospkg</depend>
  <depend>python-sklearn</depend>
  <depend>python-yaml</depend>
  <depend>python</depend>
  <depend>python-scikit-learn</depend>

  <doc_depend>doxypy</doc_depend>
</package>
