<?xml version="1.0"?>
<package format="2">
  <name>magi</name>
  <version>3.0.1</version>
  <description>
    Multistep Action Graph Instantiator
  </description>
  <url type="repository">https://github.com/personalrobotics/magi</url>
  <maintainer email="gilwool@cs.cmu.edu">Gilwoo Lee</maintainer>
  <author email="gilwool@cs.cmu.edu">Gilwoo Lee</author>
  <author email="jeking@cs.cmu.edu">Jennifer King</author>
  <author email="amj1@cmu.edu">Aaron Johnson</author>
  <author email="shushmac@andrew.cmu.edu">Shushman Choudhury</author>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="mharding@andrew.cmu.edu">Matteo Harding</author>
  <author email="bhou@cs.cmu.edu">Brian Hou</author>
  <license>unreleased</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>prpy</depend>
  <depend>python-argparse</depend>
  <depend>python-hashlib</depend>
  <depend>python-matplotlib</depend>
  <depend>python-networkx</depend>
  <depend>python-numpy</depend>
  <depend>python-rospkg</depend>
  <depend>python-sklearn</depend>
  <depend>python-yaml</depend>
  <depend>python</depend>
  <depend>python-scikit-learn</depend>

  <doc_depend>doxypy</doc_depend>
</package>
